# fastapi-social-network

./: .gitignore  pyproject.toml
.github/workflows/: python-app.yml
social_network/: config.py  database.py  logging_conf.py  main.py  security.py  tasks.py
social_network/routers/: post.py  upload.py  user.py
social_network/tests/: conftest.py  test_security.py
social_network/tests/routers/: test_post.py  test_tasks.py  test_user.py
